# chess_game_V.2.0

./: .env  README.fr.md  asset-manifest.json  example_usage.py  index.html  package-lock.json
client/: README.md  package.json
client/src/: index.jsx
client/src/components/: CardLearn.jsx  CardsSections.jsx  Header.jsx  OpeningBoard.jsx
client/src/context/: WebSocketProvider.jsx
client/src/lib/: supabase.js
client/src/pages/: ErrorPage.jsx  Multiplayer.jsx  Training.jsx
client/src/services/: stockfishService.js
client/src/styles/: evaluation-panel.css  header.css  layout.css  media.css  variables.css
client/src/utils/: GameState.js  MoveHandler.js  SquareStyles.js
public/: index.html
server/: .env  package-lock.json  render.yaml  stockfish_server.py
server/backend/: package.json  serverBackEnd.js
server/backend/route/: opening.js
server/backend/ws/: ws-server.js
server/db/: pool.js  supabase.js
server/local-dev/: server.sh  ws-api-rest.js  ws-serverlocal.js  wss-server.js
server/route/: opening.js
server/services/: gameService.js
server/stockfish/: .dockerignore  Dockerfile  requirements.txt  setup.cfg  setup.py  stockfish_manager.py
src/: App.css
src/components/: Card.jsx  ChessboardComponents.jsx  EvaluationPanel.jsx  GameStatusComponents.jsx  MoveRecapComponents.jsx
src/context/: WebSocketContext.jsx
src/pages/: Learn.jsx
src/styles/: buttons.css  card.css  chessboard.css  game-section.css  learn-section.css  openingBoard.css  popup-overlay.css
static/css/: main.eda6a315.css
static/js/: main.e0315f92.js
(+2 files in other folders)
