[metadata]
description = Chess Stockfish Service
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
setup_requires =
    setuptools>=65.5.0
    wheel
install_requires =
    python-chess==1.999
    numpy==1.24.3
    flask==2.3.3
    flask-cors==4.0.0

[options.extras_require]
dev =
    pytest
    black
    flake8

[egg_info]
tag_build = 
tag_date = 0
